crates/core/talkbank-parser-re2c/tests/snapshots/parser_fixtures__id_2.snap
---
source: crates/talkbank-parser-re2c/tests/parser_fixtures.rs
expression: parsed
---
language: eng
corpus: Lyon
speaker: MAF
age: ""
sex: ""
group: ""
ses: ""
role: Male
education: ""
custom_field: Male_Adult_Far
