crates/core/talkbank-parser-re2c/tests/snapshots/parser_fixtures__id_3.snap
---
source: crates/talkbank-parser-re2c/tests/parser_fixtures.rs
expression: parsed
---
language: eng
corpus: Lyon
speaker: FAN
age: ""
sex: ""
group: ""
ses: ""
role: Female
education: ""
custom_field: Female_Adult_Near
