crates/core/talkbank-parser-re2c/tests/snapshots/parser_fixtures__languages_4.snap
---
source: crates/talkbank-parser-re2c/tests/parser_fixtures.rs
expression: result
---
codes:
  - deu
