crates/core/talkbank-parser-re2c/tests/snapshots/parser_fixtures__main_tier_1.snap
---
source: crates/talkbank-parser-re2c/tests/parser_fixtures.rs
expression: result.unwrap()
---
speaker:
  Speaker: FAF
tier_body:
  linkers: []
  langcode: ~
  contents:
    - Action:
        zero:
          Zero: "0"
        annotations: []
  terminator:
    Period: "."
  postcodes: []
  media_bullet:
    MediaBullet:
      raw_text: "\u00151160_2160\u0015"
      start_time: "1160"
      end_time: "2160"
