crates/core/talkbank-parser-re2c/tests/snapshots/parser_fixtures__main_tier_3.snap
---
source: crates/talkbank-parser-re2c/tests/parser_fixtures.rs
expression: result.unwrap()
---
speaker:
  Speaker: OLN
tier_body:
  linkers: []
  langcode: ~
  contents:
    - Action:
        zero:
          Zero: "0"
        annotations: []
  terminator:
    Period: "."
  postcodes: []
  media_bullet:
    MediaBullet:
      raw_text: "\u00153110_4450\u0015"
      start_time: "3110"
      end_time: "4450"
